# Protein-Api

./: README.md  api.py  protein_gene_analysis.xlsx  pyproject.toml
