[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Fabian Rosner <fabian@rosner.email>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
